[package]
name = "sol-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sns-sdk = "1.2.0"
solana-sdk = "1.16.15"
solana-client = "1.16.15"
clap = {version = "4.4.6", features = ["derive"]}